--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "demo": "webpack-dev-server --open"
+    "demo": "webpack-dev-server --open",
+    "test": "jest"
   },
   "dependencies": {
     "react": "16.9.0",
@@ -11,6 +12,7 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "css-loader": "3.2.0",
+    "expect-type": "0.8.0",
     "html-webpack-plugin": "3.2.0",
     "source-map-loader": "0.2.4",
     "style-loader": "1.0.0",
@@ -18,6 +20,10 @@
     "typescript": "3.8.3",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.7",
-    "webpack-dev-server": "3.8.0"
+    "webpack-dev-server": "3.8.0",
+    "@types/jest": "24.0.11",
+    "jest": "24.5.0",
+    "ts-jest": "24.0.0",
+    "ts-node": "8.0.3"
   }
 }
